# whisper-hotkey

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  Info.plist  README.md  TESTING.md  clippy.toml  codecov.yml  coverage.lcov  implem-plan.md  phase-3-plan.md  streamdeck-integration-plan.md
.claude/: pr31-review-analysis.md  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: actionlint.yml  ci.yml  docs.yml  release.yml  shellcheck.yml  update-homebrew.yml
docs/: GITHUB_APP_SETUP.md  HOMEBREW_SETUP.md  book.toml
docs/adr/: 0001-streaming-transcription.md
docs/src/: SUMMARY.md  introduction.md
docs/src/configuration/: audio.md  models.md  performance.md  reference.md
docs/src/development/: building.md  contributing.md  structure.md  testing.md
docs/src/getting-started/: installation.md  permissions.md  quick-start.md
docs/src/troubleshooting/: common-issues.md  performance.md  permissions.md
docs/src/usage/: alias-matching.md  basic.md  hotkeys.md  profiles.md
plans/: pr33-review-fixes.md  test-coverage-improvement.md
resources/: AppIcon.icns
scripts/: com.whisper-hotkey.plist  create-app-bundle.sh  create-dmg-background.sh  create-dmg.sh  create-icon.sh  create-release.sh  create-state-icons.py  install.sh  setup-launchagent.sh  uninstall.sh  update-homebrew.sh
src/: alias.rs  config.rs  lib.rs  main.rs  permissions.rs  recording_cleanup.rs  telemetry.rs  tray.rs
src/audio/: capture.rs
src/input/: cgevent.rs  hotkey.rs  mod.rs
src/transcription/: download.rs  engine.rs  mod.rs
tests/: phase5_integration_test.rs
