[package]
name = "whisper-hotkey"
version = "0.1.0"
edition = "2021"

[dependencies]
# Phase 1: Foundation
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
core-graphics = "0.23"
cocoa = "0.25"

# Phase 2: Global Hotkey
global-hotkey = "0.6"

# Phase 3: Audio Recording
cpal = "0.15"
ringbuf = "0.4"
hound = "3"

# Phase 4+: Add later
# whisper-rs = "0.15"
# reqwest = { version = "0.11", features = ["blocking"] }
