[package]
name = "whisper-hotkey"
version = "0.1.0"
edition = "2021"

[dependencies]
# Phase 1: Foundation
tokio = { version = "1", features = ["full"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
core-graphics = "0.25"
core-foundation = "0.10"
cocoa = "0.25"

# Phase 2: Global Hotkey
global-hotkey = "0.7"

# Phase 3: Audio Recording
cpal = "0.15"
ringbuf = "0.4"
hound = "3"

# Phase 4: Whisper Integration
whisper-rs = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
strsim = "0.11"

# Menubar Integration
tray-icon = "0.21"
image = "0.25"

[dev-dependencies]
mockall = "0.14"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
# Core groups (priority -1 to allow individual overrides)
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Restriction lints - cherry-picked for safety
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "deny"

# Additional quality lints
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
exit = "deny"
lossy_float_literal = "deny"
rest_pat_in_fully_bound_structs = "deny"
str_to_string = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
